--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">Islami</string>
+    <string name="app_name">اسلامى</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="sura_number">Sura number</string>
-    <string name="sura_name">Sura name</string>
-    <string name="islami">Islami</string>
-    <string name="quran">Quran</string>
-    <string name="hadeth">hadeth</string>
-    <string name="sebha">sebha</string>
-    <string name="radio">radio</string>
+    <string name="sura_number">رقم السورة</string>
+    <string name="sura_name">اسم السورة</string>
+    <string name="islami">اسلامى</string>
+    <string name="quran">القرآن</string>
+    <string name="hadeth">الاحاديث</string>
+    <string name="sebha">السبحة</string>
+    <string name="radio">الراديو</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ahadeth">الاحاديث</string>
